--- a/src/assets/sass/layout/_banner.scss
+++ b/src/assets/sass/layout/_banner.scss
@@ -70,11 +70,12 @@
 
     background-color: _palette(bg);
 
-    background-image: linear-gradient(
-        to top,
-        transparentize(_palette(bg), 0.2),
-        transparentize(_palette(bg), 0.2)
-      ),
+     background-image: 
+    //  linear-gradient(
+    //     to top,
+    //     transparentize(_palette(bg), 0.2),
+    //     transparentize(_palette(bg), 0.2)
+    //   ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
     background-size: auto, cover;
