--- a/src/assets/sass/layout/_banner.scss
+++ b/src/assets/sass/layout/_banner.scss
@@ -71,11 +71,11 @@
     background-color: _palette(bg);
 
      background-image: 
-    //  linear-gradient(
-    //     to top,
-    //     transparentize(_palette(bg), 0.2),
-    //     transparentize(_palette(bg), 0.2)
-    //   ),
+     linear-gradient(
+        to top,
+        transparentize(_palette(bg), 0.2),
+        transparentize(_palette(bg), 0.2)
+      ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
     background-size: auto, cover;
