--- a/src/assets/sass/layout/_banner.scss
+++ b/src/assets/sass/layout/_banner.scss
@@ -74,7 +74,7 @@
      linear-gradient(
         to top,
         transparentize(_palette(bg), 0.2),
-        
+        transparentize(_palette(bg), 0.2),
       ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
