--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -66,7 +66,7 @@
         transparentize(_palette(bg), 0.2),
         transparentize(_palette(bg), 0.2)
       ),
-      url('../images/bg.jpg');
+      url('https://i.imgur.com/kAz2mcZ.jpeg');
 
     background-size: auto, cover;
 
