_footer.scss: changed

--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -59,7 +59,7 @@
   }
 
   @include breakpoint('<=large') {
-    background-color: _palette(bg);
+    background-color: #f5bf42;
 
     background-image: linear-gradient(
         to top,
