--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -64,7 +64,7 @@
     background-image: linear-gradient(
         to top,
         transparentize(_palette(bg), 0.2),
-        
+        transparentize(_palette(bg), 0.2)
       ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
