--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -63,8 +63,8 @@
 
     background-image: linear-gradient(
         to top,
-        transparentize(_palette(bg), 0.2),
-        transparentize(_palette(bg), 0.2)
+        transparentize(#f5bf42, 0.2),
+        transparentize(#f5bf42, 0.2)
       ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
