_footer.scss: changed

--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -63,8 +63,8 @@
 
     background-image: linear-gradient(
         to top,
-        transparentize(#f5bf42, 0.8),
-        transparentize(#f5bf42, 1.0)
+        transparentize(#bf9430, 0.8),
+        transparentize(#bf9430, 1.0)
       ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
