--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -64,7 +64,7 @@
     background-image: linear-gradient(
         to top,
         transparentize(#bf9430, 0.2),
-        transparentize(#bf9430, 1.0)
+        transparentize(#bf9430, .4)
       ),
       url('https://i.imgur.com/kAz2mcZ.jpeg');
 
