--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -66,7 +66,7 @@
         transparentize(#bf9430, 0.2),
         transparentize(#bf9430, .4)
       ),
-      url('https://i.imgur.com/kAz2mcZ.jpeg');
+    //   url('https://i.imgur.com/kAz2mcZ.jpeg');
 
     background-size: auto, cover;
 
