_wrapper.scss: changed

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -120,7 +120,7 @@
 }
 
 .wrapper {
-  background-color: _palette(bg);
+  background-color: #e3b049;
   margin: _size(wrapper-edges, large) 0;
   position: relative;
   @include wrapper-edges-color(_palette(bg));
