--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -174,8 +174,8 @@
   }
 
   &.spotlight {
-    @include wrapper-edges-color(_palette(accent));
-    background-color: _palette(accent);
+    @include wrapper-edges-color(#e3b049);
+    background-color: #e3b049;
 
     .inner {
       @include vendor('display', 'flex');
