_typography.scss: changed

--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -100,7 +100,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
+		color: #f3dfa2;
 		font-family: _font(family-heading);
 		font-weight: _font(weight-heading-bold);
 		letter-spacing: _font(kern-heading);
