_features.scss: changed

--- a/src/assets/sass/components/_features.scss
+++ b/src/assets/sass/components/_features.scss
@@ -32,7 +32,7 @@
 				width: calc(100% + #{3.5em});
 
 				img {
-					border-radius: _size(border-radius) _size(border-radius) 0 0;
+					border-radius: 0 0 0 0;
 					width: 100%;
 				}
 			}
