_features.scss: changed

--- a/src/assets/sass/components/_features.scss
+++ b/src/assets/sass/components/_features.scss
@@ -23,7 +23,7 @@
 			}
 
 			.image {
-				border-radius: _size(border-radius) _size(border-radius) 0 0;
+				border-radius: 0 0 0 0;
 				display: block;
 				margin-bottom: 1.75em;
 				margin-left: -1.75em;
