_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -13,7 +13,7 @@
 		position: relative;
 
 		img {
-			border-radius: _size(border-radius);
+			border-radius: _size(border-radius) - 10;
 			display: block;
 		}
 
