--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -184,14 +184,14 @@
     }
 
     .image {
-      border-radius: 50%;
+      border-radius: 50;
       margin: 0 _size(section-spacing, large) _size(element-margin) 0;
       width: 22em;
       overflow: hidden;
       -ms-flex: 1;
 
       img {
-        border-radius: 50%;
+        border-radius: 50;
         width: 100%;
       }
     }
