_wrapper.scss: changed

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -191,7 +191,7 @@
       -ms-flex: 1;
 
       img {
-        border-radius: 0;
+        border-radius: 100%;
         width: 100%;
       }
     }
