--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -121,6 +121,9 @@
 			padding-bottom: 1em;
 			border-bottom: solid 2px _palette(border);
 		}
+        &.minor {
+			border-bottom: solid 2px _palette(border);
+		}
 	}
 
 	h2 {
