--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -122,7 +122,7 @@
 			border-bottom: solid 2px _palette(border);
 		}
         &.minor {
-			border-bottom: solid 2px _palette(border);
+			border-top: solid 2px _palette(border);
 		}
 	}
 
