_typography.scss: changed

--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -124,6 +124,10 @@
         &.minor {
 			border-top: solid 4px _palette(border);
 		}
+        
+        &.nopadding {
+            
+        }
 	}
 
 	h2 {
