--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -128,6 +128,10 @@
         &.nopadding {
             margin: 0 0 0 0 
         }
+
+        &.center {
+            align: center;
+        }
 	}
 
 	h2 {
