--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -57,8 +57,12 @@
 				width: 100%;
 			}
 		}
-	}
 
-    .image:hover {
-        opacity: 0
-    }
+        &.member {
+
+        }
+
+        &.member:hover {
+            
+        }
+	}
