_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -61,8 +61,8 @@
         &.member {
 
         }
+	}
 
-        &.member:hover {
+       image.member:hover {
             opacity:0
         }
-	}
