--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -62,7 +62,7 @@
         }
 
         &.member:hover {
-            backdrop-filter: blur(100px);
+            filter: blur(100px);
         }
 	}
 
