--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -97,6 +97,10 @@
 
 	p {
 		margin: 0 0 _size(element-margin) 0;
+
+        &.nopadding {
+            margin: 0 0 0 0 
+        }
 	}
 
 	h1, h2, h3, h4, h5, h6 {
