--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -99,7 +99,8 @@
 		margin: 0 0 _size(element-margin) 0;
 
         &.nopadding {
-            margin: 0 0 0 0 
+            margin: 0 0 0 0
+            line-height: 
         }
 	}
 
