--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -102,6 +102,10 @@
             margin: 0 0 0 0;
             line-height: 1.3;
         }
+
+        &.lesspadding {
+            margin: 0 0 2 0;
+        }
 	}
 
 	h1, h2, h3, h4, h5, h6 {
