--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -104,7 +104,8 @@
         }
 
         &.lesspadding {
-            margin-bottom: 8px
+            text-align: center;
+            margin-bottom: 8px;
         }
 	}
 
