--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -64,7 +64,7 @@
 
         &.member:hover {
            filter: blur(4px);
-           overflow:hidden
+           overflow: hidden;
         }
 	}
 
