_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -60,6 +60,7 @@
 
         &.member {
             transition: filter blur(3px);
+            overflow: hidden;
         }
 
         &.member:hover {
