_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -66,6 +66,7 @@
         &.member:hover {
            filter: blur(4px);
            overflow: hidden;
+           margin: -5px 0 0 -5px;
         }
 	}
 
