_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -58,6 +58,10 @@
 			}
 		}
 
+        &.wrapper {
+            overflow: hidden
+        }
+
         &.member {
             transition: filter blur(3px);
             overflow: hidden;
