_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -63,7 +63,8 @@
         }
 
         &.member {
-            transition: filter blur(3px) 2s;
+            transition: filter blur(3px);
+            transition-delay: 1s
             overflow: hidden;
         }
 
