_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -64,7 +64,7 @@
 
         &.member {
             transition: filter blur(3px);
-            transition-delay: 1s;
+            transition-time-function: ease;
             overflow: hidden;
         }
 
