_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -64,7 +64,7 @@
 
         &.member {
             transition: filter blur(3px);
-            transition-timing-function: ease;
+            transition-timing-function: ease-in;
             overflow: hidden;
         }
 
