_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -63,8 +63,7 @@
         }
 
         &.member {
-            transition: filter blur(3px);
-            transition-timing-function: ease-in;
+            transition: filter blur(3px) 2s;
             overflow: hidden;
         }
 
