--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -70,6 +70,7 @@
         &.member:hover {
            filter: blur(10px);
            overflow: hidden;
+           transition: ease
         }
 	}
 
