--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -70,7 +70,7 @@
         &.member:hover {
            filter: blur(10px);
            overflow: hidden;
-           transition: all 250ms
+           transition: all 250ms ease
         }
 	}
 
