--- a/src/assets/sass/components/_hover.scss
+++ b/src/assets/sass/components/_hover.scss
@@ -6,6 +6,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
     color: #ffffff;
+    visibility: hidden;
     font-family: 'Quicksand', sans-serif;
     display: flex;
     flex-direction: column;
