--- a/src/assets/sass/components/_hover.scss
+++ b/src/assets/sass/components/_hover.scss
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: center;
     opacity: 0;
-    transition: opacity 0.25s;
+    transition: opacity 0.25s visibility .25s
 }
 
 .image__overlay:hover {
