_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -59,7 +59,8 @@
 		}
 
         &.wrapper {
-            overflow: hidden
+            overflow: hidden;
+            position: relative;
         }
 
         &.member {
