_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -74,6 +74,10 @@
            transition: all 250ms ease
         }
 
-        &. 
+        &.overlay {
+            layer {
+                
+            }
+        }
 	}
 
