_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -75,7 +75,9 @@
         }
 
         &.overlay {
-
+            opacity: 0;
+            visibility: hidden;
+            
             layer {
                 position: absolute;
                 top: 0;
