_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -77,7 +77,22 @@
         &.overlay {
             opacity: 0;
             visibility: hidden;
-            
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(36, 62, 206, 0.6);
+            color: #fff;
+            visibility: hidden;
+            opacity: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            /* transition effect. not necessary */
+            transition: opacity .2s, visibility .2s;
+
             layer {
                 position: absolute;
                 top: 0;
