_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -109,5 +109,10 @@
                 transition: opacity .2s, visibility .2s;
             }
         }
+
+        &.overlay:hover {
+            visibility: visible;
+            opacity: 1;
+        }
 	}
 
