_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -61,6 +61,8 @@
         &.wrapper {
             overflow: hidden;
             position: relative;
+            height: 200 px;
+            width: 257 px;
         }
 
         &.member {
