--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -76,7 +76,7 @@
 
         &.overlay {
             opacity: 0;
-            position: absolute;
+            position: relative;
             top: 0;
             bottom: 0;
             left: 0;
