--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -74,7 +74,7 @@
            transition: all 250ms ease
         }
 
-        &.overlay {
+        &.descriptionlayer {
             opacity: 0;
             position: absolute;
             top: 0;
