_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -70,6 +70,7 @@
 
         &.member:hover .descriptionlayer {
            filter: blur(15px);
+           opacity: 1;
            overflow: hidden;
            transition: all 250ms ease
         }
