--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -58,6 +58,11 @@
 			}
 		}
 
+        &.img {
+            display: block;
+            width: 100%;
+        }
+
         &.wrap {
             overflow: hidden;
             position: relative;
