_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -68,7 +68,7 @@
             position: relative;
         }
 
-        &.member {
+        &.overlay {
             transition: filter blur(3px) 2s;
             overflow: hidden;
         }
