_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -84,6 +84,10 @@
             transition: opacity 0.25s;
         }
 
+        &.overlay--blur {
+            filter: blur(15px)
+        }
+
         &.member:hover {
            filter: blur(15px);
            overflow: hidden;
