_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -89,9 +89,9 @@
         }
 
         &.overlay--primary {
-
+            background: #009578;
         }
-        
+
         &.descriptionlayer {
             opacity: 0;
             position: absolute;
