_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -92,10 +92,10 @@
             background: #009578;
         }
 
-        &.image__overlay > * {
-    transform: translateY(20px);
-    transition: transform 0.25s;
-}
+        &.overlay > * {
+            transform: translateY(20px);
+            transition: transform 0.25s;
+        }           
 
 
         &.descriptionlayer {
