_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -95,7 +95,11 @@
         &.overlay > * {
             transform: translateY(20px);
             transition: transform 0.25s;
-        }           
+        }   
+
+        &.overlay:hover {
+            opacity:1
+        }        
 
 
         &.descriptionlayer {
