--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -101,43 +101,18 @@
             opacity:1
         }        
 
+.image__overlay:hover > * {
+    transform: translateY(0);
+}
 
-        &.descriptionlayer {
-            opacity: 0;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            color: #fff;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+.image__title {
+    font-size: 2em;
+    font-weight: bold;
+}
 
-            /* transition effect. not necessary */
-            transition: opacity .2s, visibility .2s;
-
-            // layer {
-            //     position: absolute;
-            //     top: 0;
-            //     bottom: 0;
-            //     left: 0;
-            //     right: 0;
-            //     background: rgba(36, 62, 206, 0.6);
-            //     color: #fff;
-            //     visibility: hidden;
-            //     opacity: 0;
-            //     display: flex;
-            //     align-items: center;
-            //     justify-content: center;
-
-            //     /* transition effect. not necessary */
-            //     transition: opacity .2s, visibility .2s;
-            // }
-        }
-
-        &.description:hover {
-            opacity: 1;
-        }
+.image__description {
+    font-size: 1.25em;
+    margin-top: 0.25em;
+}
 	}
 
