_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -110,7 +110,7 @@
             font-weight: bold;
         }
 
-        .image__description {
+        &.description {
             font-size: 1.25em;
             margin-top: 0.25em;
         }
