_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -90,7 +90,7 @@
 
         &.overlay--primary {
             filter: blur(15px);
-            background: #009578;
+            // background: #009578;
         }
 
         &.overlay > * {
