--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -74,7 +74,7 @@
             left: 0;
             width: 100%;
             height: 85%;
-            background: rgba(0, 0, 0, 0.6);
+            // background: rgba(0, 0, 0, 0.6);
             color: #ffffff;
             display: flex;
             flex-direction: column;
