--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -75,7 +75,7 @@
             width: 100%;
             height: 85%;
             // background: rgba(0, 0, 0, 0.6);
-            filter: blur(15px)
+            filter: blur(15px);
             color: #ffffff;
             display: flex;
             flex-direction: column;
