--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -69,7 +69,7 @@
         }
 
         &.overlay {
-            position: absolute;
+            position: relative;
             top: 0;
             left: 0;
             width: 100%;
