_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -66,6 +66,9 @@
         &.wrap {
             overflow: hidden;
             position: relative;
+            padding: 0;
+            margin: 0;
+            border: 0;
         }
 
         &.overlay {
