_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -112,14 +112,14 @@
             transform: translateY(0);
         }
 
-        .image__title {
-    font-size: 2em;
-    font-weight: bold;
-}
+        &.title {
+            font-size: 2em;
+            font-weight: bold;
+        }
 
-.image__description {
-    font-size: 1.25em;
-    margin-top: 0.25em;
-}
+        &.description {
+            font-size: 1.25em;
+            margin-top: 0.25em;
+        }
 }
 
