--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -115,11 +115,13 @@
         &.title {
             font-size: 2em;
             font-weight: bold;
+            align-items: center;
         }
 
         &.description {
             font-size: 1.25em;
             margin-top: 0.25em;
+            align-items: center;
         }
 }
 
