_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -115,13 +115,13 @@
         &.title {
             font-size: 2em;
             font-weight: bold;
-            align-items: center;
+            text-align: center;
         }
 
         &.description {
             font-size: 1.25em;
             margin-top: 0.25em;
-            align-items: center;
+            text-align: center;
         }
 }
 
