_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -78,7 +78,7 @@
             width: 100%;
             height: 85%;
             background: rgba(0, 0, 0, 0.6);
-            color: #ffffff;
+            color: #485164;
             display: flex;
             flex-direction: column;
             align-items: center;
