_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -77,8 +77,8 @@
             left: 0;
             width: 100%;
             height: 85%;
-            background: rgba(0, 0, 0, 0.6);
-            color: #485164;
+            background: #485164;
+            color: #ffffff;
             display: flex;
             flex-direction: column;
             align-items: center;
