--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -77,7 +77,7 @@
             left: 0;
             width: 100%;
             height: 85%;
-            background: #485164;
+            background: rgba(0, 0, 0, 0.6);
             color: #ffffff;
             display: flex;
             flex-direction: column;
@@ -121,7 +121,7 @@
         &.description {
             font-size: 1.25em;
             margin-top: 0.25em;
-            text-align: center;
+            : center;
         }
 }
 
