--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -77,7 +77,7 @@
             left: 0;
             width: 100%;
             height: 85%;
-            background: rgba(0, 0, 0, 0.6);
+            background: #48516400;
             color: #ffffff;
             display: flex;
             flex-direction: column;
