_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -121,7 +121,7 @@
         &.description {
             font-size: 1.25em;
             margin-top: 0.25em;
-            : center;
+            text-align: center;
         }
 }
 
