--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -77,7 +77,7 @@
             left: 0;
             width: 100%;
             height: 90%;
-            background: rgba(72, 81, 100, 45);
+            background: rgba(72, 81, 100, .45);
             color: #ffffff;
             display: flex;
             flex-direction: column;
