--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -119,7 +119,7 @@
         }
 
         &.description {
-            font-size: 1.25em;
+            font-size: 12;
             margin-top: 0.25em;
             text-align: center;
         }
