_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -121,6 +121,8 @@
         &.description {
             font-size: 9;
             margin-top: 0.25em;
+            margin-left: 0.25em;
+            margin-right: 0.25em;
             text-align: center;
         }
 }
