_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -124,6 +124,7 @@
             padding-left: 0.25em;
             padding-right: 0.25em;
             text-align: center;
+            line-height: 80%;
         }
 }
 
