--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -116,6 +116,7 @@
             font-size: 2em;
             font-weight: bold;
             text-align: center;
+            opacity: 0;
         }
 
         &.description {
