_wrapper.scss: changed

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -213,8 +213,8 @@
     }
 
     @for $i from 2 through _misc(max-wrapper-styles) {
-      $j: 3 * ($i - 1);
-      $color: darken(#6771a8, $j), $j * 1.5;
+      $j: 4 * ($i - 1);
+      $color: saturate(darken(#6771a8, $j), $j * 1.5);
 
       &.style#{$i} {
         background-color: $color;
