--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -214,7 +214,7 @@
 
     @for $i from 2 through _misc(max-wrapper-styles) {
       $j: 10 * ($i - 1);
-      $color: saturate(darken(#6771a8, $j), $j * 1.5);
+      $color: darken(#6771a8, $j);
 
       &.style#{$i} {
         background-color: $color;
