--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -187,7 +187,7 @@
       border-radius: 100%;
       margin: 0 _size(section-spacing, large) _size(element-margin) 0;
       width: 22em;
-      overflow: hidden;
+    //   overflow: hidden;
       -ms-flex: 1;
 
       img {
