_wrapper.scss: changed

--- a/src/assets/sass/layout/_wrapper.scss
+++ b/src/assets/sass/layout/_wrapper.scss
@@ -189,7 +189,7 @@
       width: 22em;
       overflow: hidden;
       -ms-flex: 1;
-      border: 1px ;
+      border: 2px solid white;
 
       img {
         border-radius: 100%;
