--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -64,7 +64,7 @@
         }
 
         &.wrap {
-            overflow: hidden;
+            overflow: scroll;
             position: relative;
             padding: 0;
             margin: 0;
