--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -75,8 +75,8 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            // width: 100%;
+            // height: 100%;
             background: rgba(49, 58, 71, .7);
             color: #ffffff;
             display: flex;
