--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -127,7 +127,7 @@
             padding-right: 1em;
             text-align: center;
             line-height: 100%;
-            word-wrap: keep-all;
+            word-break: keep-all;
         }
 }
 
