_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -127,7 +127,8 @@
             padding-right: 1em;
             text-align: center;
             line-height: 100%;
-            word-break: break-all;
+            // word-break: break-all;
+            text-wrap: balance;
         }
 }
 
