_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -129,7 +129,7 @@
             line-height: 100%;
             // word-break: break-all;
             // text-wrap: balance;
-            hyphens: auto;
+            hyphens: manual;
         }
 }
 
