--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -79,7 +79,7 @@
             height: 100%;
             background: rgba(49, 58, 71, .7);
             color: #ffffff;
-            display: flex;
+            display: block;
             flex-direction: column;
             align-items: center;
             justify-content: center;
