--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -76,10 +76,10 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 90%;
             background: rgba(49, 58, 71, .7);
             color: #ffffff;
-            display: block;
+            display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
