--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -88,7 +88,7 @@
             padding: 0;
             margin: 0;
             border: 0;
-            overflow: hidden;
+            overflow-x: hidden;
         }
 
         &.overlay--blur {
