_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -89,6 +89,7 @@
             margin: 0;
             border: 0;
             overflow-x: hidden;
+            overflow-y: scroll;
         }
 
         &.overlay--blur {
