_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -90,6 +90,7 @@
             border: 0;
             overflow-x: hidden;
             overflow-y: scroll;
+            scrollbar-width: none; 
         }
 
         &.overlay--blur {
