_image.scss: changed

--- a/src/assets/sass/components/_image.scss
+++ b/src/assets/sass/components/_image.scss
@@ -91,6 +91,7 @@
             overflow-x: hidden;
             overflow-y: scroll;
         }
+        &.overlay::webs-
 
         &.overlay--blur {
             filter: blur(15px)
